# example-site

./: .gitignore  Cargo.toml
notes/: rust-intro.txt
slides/: rust-intro.yml
src/: main.rs
static/: style.css
templates/: base.html  error.html  index.html  slides.html
