[package]
name = "ohthreekaysixtyfour"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-web = "4"
anyhow = "1"
askama = "0.11"
askama_actix = "0.13"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1"
